fix: align cta to the left (#82)

--- a/src/mixins/CTA/component.module.css
+++ b/src/mixins/CTA/component.module.css
@@ -7,7 +7,7 @@
   font-size: 0.875rem;
   line-height: 1;
   color: var(--jahia-neutral-700);
-  text-align: center;
+  text-align: left;
   text-transform: uppercase;
   text-wrap: balance;
   text-decoration: inherit;
